[gd_scene load_steps=10 format=3 uid="uid://6vxhyoffumf0"]

[ext_resource type="Script" path="res://Menus/scripts/selecionar_tudo_corpo.gd" id="1_gjhyh"]
[ext_resource type="PackedScene" uid="uid://d0iy8gvd40fsb" path="res://Fases/cenas/menu_roupas.tscn" id="2_saqxi"]
[ext_resource type="PackedScene" uid="uid://b3lbcwsw0uigv" path="res://Player/Cenas/corpo_1.tscn" id="3_mk5g0"]
[ext_resource type="PackedScene" uid="uid://bdlh576kwk7e6" path="res://Player/Cenas/corpo_2.tscn" id="4_16yog"]
[ext_resource type="Theme" uid="uid://dbo686lfpp6fo" path="res://Artes/UI/tema_base.tres" id="5_dwp0u"]
[ext_resource type="FontFile" uid="uid://cvdg2b2exavxj" path="res://Artes/UI/Pulang.ttf" id="5_wp8su"]
[ext_resource type="StyleBox" uid="uid://cd74yqyb3csw3" path="res://Artes/UI/Styles/style_default_UI.tres" id="6_ydgtr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1elxn"]
bg_color = Color(0.74902, 0.368627, 0.607843, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k555x"]
bg_color = Color(0.74902, 0.368627, 0.607843, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="SelecionarAparencia" type="Node2D"]
position = Vector2(0, 3)
script = ExtResource("1_gjhyh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1916.0
offset_bottom = 1077.0
color = Color(0.515367, 0.779628, 0.78915, 1)

[node name="Menu_Roupas" parent="." instance=ExtResource("2_saqxi")]
position = Vector2(840, 0)
flag = 1

[node name="Corpo_1" parent="." instance=ExtResource("3_mk5g0")]
position = Vector2(252, 613)
scale = Vector2(1.15, 1.15)

[node name="Corpo_2" parent="." instance=ExtResource("4_16yog")]
position = Vector2(253, 616)
scale = Vector2(1.15, 1.15)

[node name="Label" type="Label" parent="."]
offset_left = 374.0
offset_top = 38.0
offset_right = 825.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("5_wp8su")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("6_ydgtr")
text = "Selecione a roupa do 
dia-a-dia da Costurete!"
horizontal_alignment = 1

[node name="Concluido" type="Button" parent="."]
offset_left = 492.0
offset_top = 945.0
offset_right = 822.0
offset_bottom = 1062.0
theme = ExtResource("5_dwp0u")
theme_override_styles/focus = ExtResource("6_ydgtr")
theme_override_styles/hover = SubResource("StyleBoxFlat_1elxn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k555x")
theme_override_styles/normal = ExtResource("6_ydgtr")
text = "Conclu√≠do!"

[connection signal="valor_atualizado" from="Menu_Roupas" to="." method="_on_menu_roupas_valor_atualizado"]
[connection signal="pressed" from="Concluido" to="." method="_on_concluido_pressed"]
